Phase 15: Optional Enhancements (RUM + Feature Flag Review)
ADDED:
- hooks/usePerformanceMetrics.tsx: Lightweight Real User Monitoring
  * usePerformanceMetrics: Track Web Vitals (TTFB, FCP, LCP, FID, CLS)
  * Performance ratings: good/needs-improvement/poor
  * Sends metrics to Sentry Performance Monitoring
  * PerformanceMonitor: Dev panel showing live Web Vitals
  * markPerformance/measurePerformance: Custom performance marks

VERIFIED:
- lib/feature-flags.ts: Comprehensive feature flag system already exists
  * Supports environment/role/plan/org-based flags
  * useFeatureFlag hook for React components
  * isFeatureEnabledServer for API routes
  * FeatureFlagGuard component
  * getAllFlags for superadmin panel

- components/export/ExportCenterDrawer.tsx: Already exists (created in Phase 12)
- components/tables/DataTableStandard.tsx: Already has groupBy + summary rows

Phase 15/15 (100% complete) 🎉

--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "test:models:ci": "vitest -c vitest.config.models.ts run --runInBand --testTimeout=120000 --hookTimeout=120000 --teardownTimeout=60000",
     "test:client": "vitest -c vitest.config.ts --project client run",
     "test:server": "vitest -c vitest.config.ts --project server run",
+    "test:changed": "vitest run --changed",
     "test:watch": "vitest",
     "test:ci": "vitest run --bail 1",
     "test:peek": "pnpm test 2>&1 | head -n 200",
@@ -240,7 +241,6 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.66.1",
     "react-hot-toast": "^2.6.0",
-    "react-joyride": "^2.9.2",
     "recharts": "^3.5.1",
     "rehype-sanitize": "^6.0.0",
     "rehype-stringify": "^10.0.1",
