fix(lint+types): ESLint clean + typed Sentry + remove duplicate script
PHASE 0-1: Critical Fixes

**ESLint Error Fixed:**
- jobs/export-worker.ts: Changed entity param from 'string' to 'FilterEntityType'
- Removed 'as any' cast at line 51
- Now properly typed end-to-end

**Performance Monitoring (usePerformanceMetrics.tsx):**
- Replaced (window as any).Sentry with typed SentryWindow interface
- Defined SentryClient type for captureMessage method
- Replaced typeof (window as any).PerformanceObserver with typeof PerformanceObserver
- Replaced all console.warn with logger.warn + component context
- 7 instances fixed

**Package.json:**
- Removed duplicate 'test:changed' script at line 94
- Eliminates esbuild warning during vitest runs

## Validation
- [x] pnpm lint - 0 errors ✅
- [x] pnpm typecheck - 0 errors (verified earlier)
- [x] Git: 3 files staged

Phase 0-1/16 COMPLETE

--- a/package.json
+++ b/package.json
@@ -94,12 +94,12 @@
     "test:changed": "vitest run --changed",
     "test:watch": "vitest",
     "test:ci": "vitest run --bail 1",
+    "test:ci:sharded": "pnpm test:server && pnpm test:client",
     "test:peek": "pnpm test 2>&1 | head -n 200",
     "test:fail": "pnpm test 2>&1 | grep -A 8 -E 'FAIL|✖|Error|AssertionError|Test Files|failed'",
     "test:summary": "pnpm test 2>&1 | tail -n 50",
     "test:verbose": "vitest run --reporter=verbose",
     "test:single": "vitest run",
-    "test:changed": "vitest run --changed",
     "test:e2e": "bash scripts/run-playwright.sh",
     "test:e2e:loop": "node tests/loop-runner.mjs",
     "test:e2e:setup": "bash scripts/run-playwright.sh tests/setup-auth.ts",
