--- a/package.json
+++ b/package.json
@@ -186,6 +186,7 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -193,6 +194,7 @@
     "@sentry/nextjs": "^10.27.0",
     "@smithy/smithy-client": "^4.9.7",
     "@tanstack/react-query": "^5.90.10",
+    "@types/react-joyride": "^2.0.5",
     "@vercel/functions": "^3.3.3",
     "@vercel/speed-insights": "^1.3.1",
     "ai": "^5.0.98",
@@ -241,6 +243,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.66.1",
     "react-hot-toast": "^2.6.0",
+    "react-joyride": "^2.9.3",
     "recharts": "^3.5.1",
     "rehype-sanitize": "^6.0.0",
     "rehype-stringify": "^10.0.1",
@@ -253,6 +256,7 @@
     "swr": "^2.3.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "to-buffer": "^1.2.2",
     "unified": "^11.0.5",
     "yaml": "^2.8.2",
     "zod": "^4.1.12",
