chore(ci): de-duplicate test:changed script alias

--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "test:models:ci": "vitest -c vitest.config.models.ts run --runInBand --testTimeout=120000 --hookTimeout=120000 --teardownTimeout=60000",
     "test:client": "vitest -c vitest.config.ts --project client run",
     "test:server": "vitest -c vitest.config.ts --project server run",
-    "test:changed": "vitest run --changed",
+    "test:changed": "pnpm test:changed:vitest",
+    "test:changed:vitest": "vitest run --changed",
     "test:watch": "vitest",
     "test:ci": "vitest run --bail 1",
     "test:ci:sharded": "pnpm test:server && pnpm test:client",
