--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
     "guard:fm-hooks": "node -e \"const {execSync} = require('child_process'); try { const result = execSync('grep -rn \\'eslint-disable react-hooks/rules-of-hooks\\' app/fm 2>/dev/null || true', {encoding: 'utf8'}); if (result.trim()) { console.log('❌ Found react-hooks/rules-of-hooks disables in app/fm (use FmGuardedPage)'); process.exit(1); } } catch(e) { }\"",
     "health": "bash scripts/system-health-check.sh",
     "health:watch": "watch -n 30 'bash scripts/system-health-check.sh'",
+    "lint:client-env": "tsx scripts/check-client-env.ts",
     "lint:weak-passwords": "node scripts/check-weak-passwords.js",
     "guard:seeds": "node scripts/check-seed-guards.js",
     "storybook": "storybook dev -p 6006",
@@ -228,7 +229,7 @@
     "lru-cache": "^11.2.2",
     "lucide-react": "^0.294.0",
     "meilisearch": "^0.54.0",
-    "mongodb": "^6.21.0",
+    "mongodb": "6.21.0",
     "mongoose": "^8.20.1",
     "morgan": "^1.10.1",
     "nanoid": "^5.1.6",
