chore(phase1): resolve 3 quick wins - PERF-001, BUG-TS-VITEST-CONFIG, INFRA-SENTRY
Phase 1 Complete:
- PERF-001: Verified 0 db.collection() calls (already using Mongoose)
- BUG-TS-VITEST-CONFIG: Verified no poolOptions type errors
- INFRA-SENTRY: Added NEXT_PUBLIC_SENTRY_DSN to .env.example

Evidence: grep scans confirm all items resolved

--- a/.env.example
+++ b/.env.example
@@ -467,10 +467,12 @@ OPENAI_API_KEY=your_openai_api_key
 # =============================================================================
 # MONITORING & LOGGING (Optional but Recommended for Production)
 # =============================================================================
-# Sentry (Error Tracking)
+# Sentry (Error Tracking) - NEXT_PUBLIC_ prefix required for client-side error capture
+NEXT_PUBLIC_SENTRY_DSN=your_sentry_dsn
 SENTRY_DSN=your_sentry_dsn
 SENTRY_ORG=your_org
 SENTRY_PROJECT=your_project
+SENTRY_AUTH_TOKEN=your_sentry_auth_token
 
 # Datadog (APM & Monitoring)
 DATADOG_API_KEY=your_datadog_api_key
