feat(offline): Deploy OfflineIndicator globally + fix superadmin phases API (P66)
P66: Global Offline Resilience Deployment

- Added <OfflineIndicator position="top" /> to root app/layout.tsx

- Component renders globally across all pages (work orders, marketplace, auth, admin)

- RTL-ready with useTranslation context

- Brand-compliant Fixzit Green (#00A859)

- Accessibility: role=status, aria-live=polite

P66.1: Superadmin Phases API Fixes

- Fixed imports: getSuperadminSession, parsePendingMasterMarkdown

- Fixed auth check signature and validation

Files Changed:

- app/layout.tsx: Added OfflineIndicator

- app/api/superadmin/phases/route.ts: Fixed imports/auth

- docs/PENDING_MASTER.md: Updated to include P66

--- a/.github/workflows/build-sourcemaps.yml
+++ b/.github/workflows/build-sourcemaps.yml
@@ -66,11 +66,12 @@ jobs:
           pnpm run build
 
       # Sentry release + sourcemaps (v3, with Debug ID injection)
-      - name: 🚀 Create & upload Sentry release (non-blocking)
+      # Required (blocking) on main/develop when token is set; optional (non-blocking) elsewhere
+      - name: 🚀 Create & upload Sentry release
         id: sentry
         if: ${{ env.ENABLE_SENTRY != 'false' && env.HAS_SENTRY_AUTH == 'true' }}
         uses: getsentry/action-release@v3
-        continue-on-error: true
+        continue-on-error: ${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/develop' }}
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_ORG: ${{ env.SENTRY_ORG_NAME }}
@@ -99,9 +100,21 @@ jobs:
           echo "💾 Total .map size: ${TOTAL_SIZE:-0}" >> $GITHUB_STEP_SUMMARY
           if [ "${{ steps.sentry.outcome }}" = "success" ]; then
             SENTRY_ENV="${{ github.ref == 'refs/heads/main' && 'production' || 'staging' }}"
-            echo "✅ Sentry release uploaded (release: ${{ github.sha }}, env: ${SENTRY_ENV})" >> $GITHUB_STEP_SUMMARY
+            BLOCKING_MODE="${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' }}"
+            if [ "$BLOCKING_MODE" = "true" ]; then
+              echo "✅ Sentry release uploaded REQUIRED (release: ${{ github.sha }}, env: ${SENTRY_ENV})" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "✅ Sentry release uploaded (release: ${{ github.sha }}, env: ${SENTRY_ENV})" >> $GITHUB_STEP_SUMMARY
+            fi
+          elif [ "${{ steps.sentry.outcome }}" = "failure" ]; then
+            BLOCKING_MODE="${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' }}"
+            if [ "$BLOCKING_MODE" = "true" ]; then
+              echo "❌ Sentry upload FAILED (REQUIRED on main/develop). Build will fail." >> $GITHUB_STEP_SUMMARY
+            else
+              echo "⚠️ Sentry upload failed (non-blocking on feature branches)" >> $GITHUB_STEP_SUMMARY
+            fi
           elif [ "${{ env.ENABLE_SENTRY }}" != "false" ]; then
-            echo "⚠️ Sentry upload step did not complete successfully (non-blocking). Check logs." >> $GITHUB_STEP_SUMMARY
+            echo "⚠️ Sentry upload step did not complete successfully (check logs)" >> $GITHUB_STEP_SUMMARY
           else
             echo "ℹ️ Sentry upload disabled or not configured" >> $GITHUB_STEP_SUMMARY
           fi
