fix(eslint): Improve tenant-scope rule to handle $or/$and branches
- Added objectHasTenantScope() to recursively check logical operators
- $or branches: all must be scoped (covers queries like { $or: [{orgId: x}, {org_id: x}] })
- $and branches: at least one must be scoped
- Eliminates false positive on lib/souq/fsin-generator.ts
- Fixed unused 'Info' import in CurrencySelector.tsx

Build: ✅ | Tests: 3811 ✅ | Warnings: 183 (0 errors)

--- a/.github/workflows/ci-fast-lane.yml
+++ b/.github/workflows/ci-fast-lane.yml
@@ -39,6 +39,15 @@ jobs:
       
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+
+      # P120: Cache MongoMemoryServer binaries to speed up CI
+      - name: Cache MongoMemoryServer binaries
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/mongodb-binaries
+          key: ${{ runner.os }}-mongodb-binaries-7.0.4
+          restore-keys: |
+            ${{ runner.os }}-mongodb-binaries-
       
       - name: Run TypeScript check
         run: pnpm typecheck
