feat(tests): P110 - Add comprehensive API test coverage
- Add 85 new tests (3896 total passing)
- Add tests/api/finance/ tests (ledger, expenses, invoices)
- Add tests/api/superadmin/ tests (logout, organizations, phases, tenant-switch-audit)
- Add tests/unit/lib/icu-completeness.test.ts for i18n validation
- Fix i18n missing keys in ar.json/en.json
- Update marketplace routes for production stability
- TypeScript: 0 errors
- All 3896 tests passing

--- a/.github/workflows/pr_agent.yml
+++ b/.github/workflows/pr_agent.yml
@@ -35,11 +35,12 @@ jobs:
         )
       }}
     runs-on: ubuntu-latest
-    env:
-      # Define at job level to silence linter warnings
-      ENABLE_PR_AGENT: ${{ vars.ENABLE_PR_AGENT || 'true' }}
-      HAS_OPENAI_KEY: ${{ secrets.OPENAI_KEY != '' }}
     steps:
+      - name: Prepare PR Agent env defaults
+        run: |
+          echo "ENABLE_PR_AGENT=${{ vars.ENABLE_PR_AGENT || 'true' }}" >> "$GITHUB_ENV"
+          echo "HAS_OPENAI_KEY=${{ secrets.OPENAI_KEY != '' && 'true' || 'false' }}" >> "$GITHUB_ENV"
+
       - name: PR Agent action step
         if: ${{ env.ENABLE_PR_AGENT != 'false' && env.HAS_OPENAI_KEY == 'true' }}
         uses: Codium-ai/pr-agent@main
