fix(ci): Add actions:write permission to all artifact-uploading workflows
- Fix 403 errors on artifact uploads due to missing permissions
- Updated 13 workflows: agent-governor, build-sourcemaps, ci-sharded,
  duplicate-detection, e2e-tests, eslint-quality, fixzit-quality-gates,
  i18n-validation, monthly-documentation-review, qa, requirements-index,
  test-runner, webpack
- Resolves CI artifact publishing failures

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -34,6 +34,7 @@ concurrency:
 permissions:
   contents: read
   pull-requests: write
+  actions: write
 
 jobs:
   # AUDIT-2025-11-30: Dedicated job for forked PRs to provide clear feedback
