--- a/.github/workflows/eslint-quality.yml
+++ b/.github/workflows/eslint-quality.yml
@@ -33,6 +33,7 @@ on:
 
 permissions:
   contents: read
+  actions: write
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
