--- a/.github/workflows/fixzit-quality-gates.yml
+++ b/.github/workflows/fixzit-quality-gates.yml
@@ -19,7 +19,7 @@ concurrency:
 permissions:
   contents: read
   security-events: write
-  actions: read
+  actions: write
   pull-requests: write
 
 jobs:
