--- a/package.json
+++ b/package.json
@@ -198,6 +198,7 @@
     "@sentry/nextjs": "^10.27.0",
     "@smithy/smithy-client": "^4.9.7",
     "@tanstack/react-query": "^5.90.10",
+    "@tanstack/react-table": "^8.21.3",
     "@types/react-joyride": "^2.0.5",
     "@vercel/functions": "^3.3.3",
     "@vercel/speed-insights": "^1.3.1",
