feat(P176): AI Improvement Analysis Phase 2 - Admin route tests + TypeScript fixes
Analysis Report Execution:
1. Created 6 new admin route test files (33 tests total):
   - tests/api/admin/audit-logs.route.test.ts
   - tests/api/admin/feature-flags.route.test.ts
   - tests/api/admin/communications.route.test.ts
   - tests/api/admin/notifications.route.test.ts
   - tests/api/admin/testing-users.route.test.ts
   - tests/api/admin/sms.route.test.ts

2. TypeScript fixes:
   - Fixed lib/jobs/queue.ts status type narrowing
   - Added proper const assertions for job status filters

3. From analysis report:
   - Test Coverage: +6 admin route test files
   - TypeScript: 0 errors
   - Code Quality: Fixed queue.ts type safety

Metrics from scan:
- 395 test files, 378 API routes, 240 components
- 457 queries need .lean() (P2 backlog)
- 469 buttons need aria-label (P3 backlog)
- 19 untyped any usages (P2 backlog)

--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -40,6 +40,7 @@ jobs:
       NODE_OPTIONS: --max-old-space-size=8192
       NODE_ENV: test
       CI: true
+      CI_COVERAGE: "true"
       # Auth secrets from GitHub Secrets (fallback to deterministic test values)
       JWT_SECRET: ${{ secrets.JWT_SECRET || 'test-secret-key-for-ci-tests-minimum-32-characters' }}
       NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET || 'test-nextauth-secret-for-ci-tests-32-chars' }}
