--- a/.github/workflows/pr_agent.yml
+++ b/.github/workflows/pr_agent.yml
@@ -35,12 +35,9 @@ jobs:
         )
       }}
     runs-on: ubuntu-latest
-    env:
-      ENABLE_PR_AGENT: "${{ vars.ENABLE_PR_AGENT || 'true' }}"
-      HAS_OPENAI_KEY: "${{ secrets.OPENAI_KEY != '' && 'true' || 'false' }}"
     steps:
       - name: PR Agent action step
-        if: ${{ env.ENABLE_PR_AGENT != 'false' && env.HAS_OPENAI_KEY == 'true' }}
+        if: ${{ (vars.ENABLE_PR_AGENT || 'true') != 'false' && secrets.OPENAI_KEY != '' }}
         uses: Codium-ai/pr-agent@main
         env:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
