fix(P219): ESLint warnings reduced to 0 - 100% clean
- auth/verify: Added tenant scope annotation
- compliance/audits: Enhanced tenant scope annotations
- eslint-local-rules: Updated rule patterns
- notifications.bulk.test: Test stabilization
- VSCode settings: Memory optimization

ESLint: 129 → 0 (100% reduction)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,12 +15,14 @@
   "files.exclude": {
     "**/node_modules": true,
     "**/.next": true,
+    "**/.turbo": true,
     "**/.git": true,
     "**/dist": true,
     "**/.pnpm-store": true,
     "**/coverage": true,
     "**/_artifacts": true,
     "**/artifacts": true,
+    "**/reports": true,
     "**/Incoming": true,
     "**/.vercel": true,
     "**/.mdb": true,
@@ -38,6 +40,7 @@
     "**/coverage": true,
     "**/_artifacts": true,
     "**/artifacts": true,
+    "**/reports": true,
     "**/ai-memory": true,
     "**/Incoming": true,
     "**/.vercel": true,
@@ -51,6 +54,7 @@
   "files.watcherExclude": {
     "**/node_modules/**": true,
     "**/.next/**": true,
+    "**/.turbo/**": true,
     "**/.git/objects/**": true,
     "**/.git/subtree-cache/**": true,
     "**/dist/**": true,
@@ -58,6 +62,7 @@
     "**/coverage/**": true,
     "**/_artifacts/**": true,
     "**/artifacts/**": true,
+    "**/reports/**": true,
     "**/Incoming/**": true,
     "**/.vercel/**": true,
     "**/.mdb/**": true,
