docs(P230): AI Improvement Analysis - detailed SSOT update
Completed Items:
- SEC-002: Tenant scope (0 ESLint warnings)
- PERF-001: maxTimeMS on 15+ aggregates
- FEAT-001-004: ZATCA, SSE, Bulk Actions

Pending Items (with file counts):
- TEST-COVERAGE-GAP: 316 routes without tests (HIGH)
- REFACTOR-001: 24 files >1000 lines (MEDIUM)
- DEP-001: 14 outdated packages (LOW)
- OPT-001-003: Dead code, Storybook, E2E (LOW)

Fixes:
- ESLint: unused lastUpdated in counters/stream
- ESLint: unused Link import in SuperadminHeader
- Added missing scripts/check-ts-expect-error.mjs

System: TS=0, ESLint=0, Tests=4103+

--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "test:server": "vitest -c vitest.config.ts --project server run",
     "test:watch": "vitest",
     "test:ci": "vitest run --bail 1",
+    "test:ci:shard": "node scripts/vitest-shard.mjs",
     "test:peek": "pnpm test 2>&1 | head -n 200",
     "test:fail": "pnpm test 2>&1 | grep -A 8 -E 'FAIL|✖|Error|AssertionError|Test Files|failed'",
     "test:summary": "pnpm test 2>&1 | tail -n 50",
